# mcp-crash-course

./: pyproject.toml
course-02/: server_flight.py  server_sample.py
course-03/: client_sse.py  client_sse_with_llm.py  client_stdio.py  client_stdio_with_llm.py  server.py
